# forge-fleet

./: .cursorrules  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Next_Session_plan.md  README.md  build.rs  docker-compose.postgres.yml  forgefleet_subagent.py  log.txt  models.py  rust-toolchain.toml  setup.py  temp.txt
crates/ff-agent/: Cargo.toml
crates/ff-agent/src/: activity.rs  agent_coordinator.rs  agent_hint.rs  agent_loop.rs  agent_roles.rs  agents_db.rs  alert_evaluator.rs  alert_policy_seed.rs  arbiter.rs  audit_logger.rs  auto_backlog_feeder.rs  auto_upgrade.rs  autoscaler.rs  backend_detect.rs  bandit_promotion.rs  bash_security.rs  batch_manager.rs  brain.rs  brain_mirror.rs  calendar_monitor.rs  capability_synthesis.rs  chat_manager.rs  circuit_breaker.rs  cli_executor.rs  cloud_budget.rs  cloud_error.rs  cloud_llm_registry.rs  codegen_apply.rs  commands.rs  commands_extended.rs  compaction.rs  config.rs  config_distributor.rs  conformance.rs  consensus.rs  coordinator.rs  coverage_guard.rs  daemon.rs  db_integrity.rs  deadlines.rs  (+161 more)
crates/ff-agent/tests/: agent_coordinator_tests.rs  auto_backlog_feeder.rs  health_test.rs
crates/ff-api/: Cargo.toml
crates/ff-api/src/: adaptive_router.rs  autoload.rs  circuit_breaker.rs  classifier.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  openai_compat.rs  quality_tracker.rs  registry.rs  router.rs  server.rs  token_ledger.rs  tool_calling.rs  types.rs
crates/ff-brain/: Cargo.toml
crates/ff-brain/src/: chat.rs  communities.rs  community_summary.rs  context.rs  corpus.rs  cortex.rs  cortex_embed.rs  cortex_reindex.rs  data_index.rs  distillation.rs  doc_index.rs  dreamer.rs  embeddings.rs  facts.rs  image_index.rs  lib.rs  local_llm.rs  procedural_memory.rs  stack_backlog.rs  train_conflict.rs  vault.rs  vector_search.rs
crates/ff-capacity/: Cargo.toml
crates/ff-capacity/src/: error.rs  lib.rs
crates/ff-cli/: Cargo.toml
crates/ff-cli/src/: lib.rs  main.rs  notify_cmd.rs
crates/ff-code-intel/: Cargo.toml
crates/ff-code-intel/src/: graph.rs  index.rs  lib.rs  parser.rs  search.rs
crates/ff-control/: Cargo.toml
crates/ff-control/src/: bootstrap.rs  commands.rs  config.rs  control_plane.rs  dispatcher.rs  distributed_fabric.rs  errors.rs  escalation_logger.rs  executor.rs  ha_coordinator.rs  health.rs  lib.rs  llm_480b_wrapper.rs  slot_allocation.rs  subsystem_watchdog.rs  task_processor.rs  timeout.rs
crates/ff-core/: Cargo.toml
crates/ff-core/src/: activity.rs  artifact_cache.rs  artifact_cache_dir.rs  artifact_fetch.rs  audit.rs  build_version.rs  chaos.rs  ci_trigger.rs  circuit_breaker.rs  computer.rs  config.rs  db.rs  db_health.rs  error.rs  fleet_resolver.rs  hardware.rs  health.rs  hot_reload.rs  leader.rs  lib.rs  maintenance.rs  model_id.rs  monitor.rs  node.rs  notifications.rs  obsidian_export.rs  outbox.rs  panic_hook.rs  quarantine.rs  queue.rs  run_limits.rs  session_export.rs  software_registry.rs  state.rs  synthetic.rs  task.rs  task_error.rs  tool_path.rs  types.rs  url.rs  (+1 more)
crates/ff-cron/: Cargo.toml
crates/ff-cron/src/: dispatcher.rs  engine.rs  heartbeat.rs  job.rs  lib.rs  persistence.rs  policy.rs  schedule.rs
crates/ff-db/: Cargo.toml
crates/ff-db/src/: backup.rs  connection.rs  dsn_of_record.rs  leader_state.rs  lib.rs  metrics_partitions.rs  migrations.rs  operational_store.rs  pm.rs  postgres.rs  queries.rs  replication.rs  runtime_registry.rs  schema.rs  sync.rs  work_queue.rs
crates/ff-db/tests/: migration_tests.rs  test_work_items.rs
crates/ff-deploy/: Cargo.toml
crates/ff-deploy/src/: config.rs  daemon.rs  deploy.rs  deploy_tests.rs  deployer.rs  git_utils.rs  health_gate.rs  lib.rs  node.rs  release.rs  resolution.rs  rollback.rs  rollout.rs  strategy.rs
crates/ff-discovery/: Cargo.toml
crates/ff-discovery/src/: activity.rs  etcd_client.rs  hardware.rs  health.rs  lib.rs  models.rs  ports.rs  profile.rs  registry.rs  scanner.rs
crates/ff-evolution/: Cargo.toml
crates/ff-evolution/src/: analyzer.rs  backlog.rs  learning.rs  lib.rs  loop.rs  repair.rs  verification.rs
crates/ff-gateway/: Cargo.toml  build.rs
crates/ff-gateway/src/: brain_api.rs  capacity_router.rs  cl_config.rs  cli_bridge.rs  cloud_llm.rs  connection_monitor.rs  discord.rs  embed.rs  interactions_api.rs  jarvis_api.rs  lib.rs  llm_routing.rs  message.rs  middleware.rs  onboard.rs  orchestrate.rs  orchestrator_adapter.rs  pgcat_config.rs  pulse_api.rs  router.rs  screen_ctrl.rs  server.rs  skills_api.rs  static_files.rs  tasks.rs  telegram.rs  telegram_commands.rs  telegram_grounding.rs  telegram_transport.rs  tool_registry_api.rs  voice_api.rs  webhook.rs  websocket.rs
crates/ff-mc/: Cargo.toml
crates/ff-mc/src/: alerts.rs  api.rs  auto_link.rs  board.rs  counsel.rs  dashboard.rs  db.rs  dependency.rs  epic.rs  error.rs  legal.rs  lib.rs  operational_api.rs  operational_portfolio.rs  portfolio.rs  review_item.rs  runner.rs  sprint.rs  task_group.rs  work_item.rs
crates/ff-mcp/: Cargo.toml
crates/ff-mcp/src/: brain_tools.rs  cortex_tools.rs  federation.rs  handlers.rs  lib.rs  llm_exec.rs  memory_tools.rs  pool.rs  protocol.rs  server.rs  strategy_dispatch.rs  tools.rs  transport.rs
crates/ff-memory/: Cargo.toml
crates/ff-memory/src/: cache.rs  capture.rs  graph.rs  lib.rs  rag.rs  retrieval.rs  session.rs  store.rs  types.rs  user_model.rs  user_model_registry.rs  workspace.rs
crates/ff-mesh/: Cargo.toml
crates/ff-mesh/src/: election.rs  leader.rs  lib.rs  resource_pool.rs  scheduler.rs  work_queue.rs  worker.rs
crates/ff-observability/: Cargo.toml
crates/ff-observability/src/: alert_dedup.rs  alerting.rs  alerts.rs  dashboard.rs  error_classifier.rs  events.rs  lib.rs  (+11 more)
crates/ff-orchestrator/: Cargo.toml
crates/ff-pipeline/: Cargo.toml
crates/ff-pulse/: Cargo.toml
crates/ff-routing-policy/: Cargo.toml
crates/ff-runtime/: Cargo.toml
crates/ff-security/: Cargo.toml
crates/ff-sessions/: Cargo.toml
crates/ff-skills/: Cargo.toml
crates/ff-terminal/: Cargo.toml  build.rs  build_version.rs
crates/ff-updater/: Cargo.toml
(+1768 files in other folders)
