[package]
name = "ff-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ff-core = { path = "../ff-core" }
ff-api = { path = "../ff-api" }
ff-discovery = { path = "../ff-discovery" }
ff-db = { path = "../ff-db" }
ff-pipeline = { path = "../ff-pipeline" }
ff-orchestrator = { path = "../ff-orchestrator" }
ff-observability = { path = "../ff-observability" }
ff-pulse = { path = "../ff-pulse" }
ff-security = { path = "../ff-security" }
ff-cron = { path = "../ff-cron" }
ff-capacity = { path = "../ff-capacity" }
ff-routing-policy = { path = "../ff-routing-policy" }

anyhow.workspace = true
base64 = "0.22"
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
dirs = "5"
futures.workspace = true
glob = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
regex = "1"
serde_yaml = "0.9"
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-nats = "0.37"
age = { version = "0.11", features = ["armor"] }
secrecy = "0.10"
rand = "0.8"
sysinfo = "0.33"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower.workspace = true
