[package]
name = "ff-capacity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cached fleet capacity snapshot for router hot paths"

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
sqlx = { workspace = true }
arc-swap = "1"
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
uuid = { workspace = true }
