[package]
name = "ff-code-intel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet code intelligence — AST parsing, structural search, code knowledge graph"

[dependencies]
tree-sitter = "0.26"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
tokio.workspace = true
chrono.workspace = true
