[package]
name = "ff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet core primitives — config, types, errors, hardware detection, leader election"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
dashmap.workspace = true
reqwest.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
