[package]
name = "ff-cron"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet scheduler and automation engine"

[dependencies]
ff-core = { path = "../ff-core" }
ff-db = { path = "../ff-db" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util", "rt-multi-thread"] }
