[package]
name = "ff-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet embedded SQLite database — connection pool, migrations, replication, backup"

[dependencies]
ff-core = { path = "../ff-core" }

# SQLite — bundled so we compile libsqlite3 from source (zero system deps)
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "fs", "rt"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Transitional Postgres runtime registry support
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# HTTP client (for follower sync)
reqwest = { workspace = true, features = ["json"] }

# Utils
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
