[package]
name = "ff-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet deployment and rollout orchestration (scaffold)"

[dependencies]
ff-core = { path = "../ff-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
