[package]
name = "ff-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet observability — telemetry, metrics, events, log ingestion, alerting, dashboard"

[dependencies]
ff-core = { path = "../ff-core" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Web / HTTP (dashboard APIs)
axum.workspace = true
reqwest.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging / tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Filesystem
dirs.workspace = true

# Prometheus metrics export
prometheus = "0.13"
lazy_static = "1"

# Utils
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
