[package]
name = "ff-pulse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fleet Pulse — real-time fleet metrics via Redis"

[dependencies]
ff-core = { path = "../ff-core" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
sysinfo = "0.33"
futures = { workspace = true }
tokio-stream = "0.1"
