[package]
name = "ff-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet inference engine management — llama.cpp, vLLM, MLX, Ollama"

[dependencies]
ff-core = { path = "../ff-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
