[package]
name = "ff-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet security and policy enforcement primitives"

[dependencies]
ff-core = { path = "../ff-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
axum.workspace = true
http = "1"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
