[package]
name = "ff-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet universal skill system — discover, load, adapt, execute, and select skills from OpenClaw, Claude, MCP, and custom sources"

[dependencies]
ff-core = { path = "../ff-core" }
tokio = { workspace = true, features = ["fs", "process", "time"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
