[package]
name = "ff-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeFleet self-update — check, build, verify, swap, rollback"

[dependencies]
ff-core = { path = "../ff-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
